// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`RegistrationName individual is filling out form for someone else 1`] = `
<FormSection>
  <ProgressIndicator
    sectionName="About you"
    sectionPosition="Section 1 of 2"
  />
  <Question
    text="What is your name?"
  />
  <TextInput
    error={null}
    fieldName="formData.FirstName"
    label="First Name"
    validation={[Function]}
  />
  <TextInput
    error={null}
    fieldName="formData.LastName"
    label="Last Name"
    validation={[Function]}
  />
</FormSection>
`;

exports[`RegistrationName individual is filling out form for themselves 1`] = `
<FormSection>
  <ProgressIndicator
    sectionName="About you"
    sectionPosition="Section 1 of 2"
  />
  <Question
    text="What is your name?"
  />
  <TextInput
    error={null}
    fieldName="formData.FirstName"
    label="First Name"
    validation={[Function]}
  />
  <TextInput
    error={null}
    fieldName="formData.LastName"
    label="Last Name"
    validation={[Function]}
  />
</FormSection>
`;

exports[`RegistrationName renders with an error 1`] = `
<FormSection>
  <ProgressIndicator
    sectionName="About you"
    sectionPosition="Section 1 of 2"
  />
  <Question
    text="What is your name?"
  />
  <TextInput
    fieldName="formData.FirstName"
    label="First Name"
    validation={[Function]}
  />
  <TextInput
    fieldName="formData.LastName"
    label="Last Name"
    validation={[Function]}
  />
</FormSection>
`;
